fix: Wrapped the images in a picture tag. Created a unique class and styles for the button "Производство г. Краснодар"

--- a/assets/css/production.css
+++ b/assets/css/production.css
@@ -57,12 +57,15 @@
 }
 
 .production-quote__image {
-	background-image: url(../../assets/img/production_quote.png);
-	background-size: cover;
 	min-width: 360px;
 	height: 228px;
 	border-left: 2px solid #4f538c;
 	box-shadow: 0px 24px 64px -16px #a7bee840;
+}
+
+.production-quote__image img {
+	width: 100%;
+	height: 100%;
 }
 
 .info-content__box {
@@ -152,7 +155,7 @@
 	z-index: 1;
 }
 
-.more-details__text {
+.more-details__production-text {
 	text-transform: none;
 	font-family: 'Source Sans 3';
 	font-size: 18px;
@@ -161,12 +164,20 @@
 	color: #ffffff;
 }
 
-.btn-cover {
+.more-details__production-btn {
+	display: flex;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
+    min-width: 64px;
+    height: 32px;
+    border: none;
+    margin: 0;
 	background-color: #ff781f;
 	transition: background 0.3s ease;
 }
 
-.btn-cover::before {
+.more-details__production-btn::before {
 	content: '';
 	position: absolute;
 	top: 0;
@@ -179,7 +190,7 @@
 	transition: transform 0.3s ease, opacity 0.3s ease;
 }
 
-.btn-cover::after {
+.more-details__production-btn::after {
 	content: '';
 	position: absolute;
 	bottom: 0;
@@ -192,31 +203,31 @@
 	transition: transform 0.3s ease, opacity 0.3s ease;
 }
 
-.more-details__cover:hover .btn-cover {
+.more-details__cover:hover .more-details__production-btn {
 	background: #d44f0c;
 }
 
-.more-details__cover:hover .btn-cover::before {
+.more-details__cover:hover .more-details__production-btn::before {
 	transform: translateX(-50%) scaleX(0.5) skew(432deg);
 	opacity: 1;
 }
-.more-details__cover:hover .btn-cover::after {
+.more-details__cover:hover .more-details__production-btn::after {
 	transform: translateX(-50%) scaleX(0.5) skew(288deg);
 	opacity: 1;
 }
 
-.btn-cover .arrow.next.cover-next {
+.more-details__production-btn .arrow.next.cover-next {
 	margin-bottom: 0;
 	transform: rotate(-135deg);
 	width: 8px;
 	height: 8px;
 }
 
-.btn-cover .arrow.next {
+.more-details__production-btn .arrow.next {
 	border-bottom: 6px solid #ffffff;
 	border-left: 6px solid #ffffff;
 	margin-bottom: 5px;
-	margin-right: 25px;
+	margin-right: 26px;
 	transform: rotate(-45deg);
 	transition: transform 0.5s ease, margin-bottom 0.3s ease;
 }
@@ -228,13 +239,16 @@
 }
 
 .production-aside__image {
-	background-image: url(../../assets/img/production_aside.png);
-	background-size: cover;
-	background-position: center;
 	width: 360px;
 	height: 500px;
 	border-left: 2px solid #ff781f;
 	margin-top: 10px;
+	text-align: center;
+}
+
+.production-aside__image img {
+	width: 100%;
+	height: 100%;
 }
 
 .production-aside {
@@ -351,6 +365,7 @@
 	.production-aside__image {
 		margin: 0;
 		width: 100%;
+		height: 240px;
 	}
 
 	.production-quote__title {
@@ -419,7 +434,7 @@
 		font-size: 24px;
 	}
 
-	.more-details__text {
+	.more-details__production-text {
 		display: none;
 	}
 }
